After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719647 - gdata-goa-authorizer.h broken for C++
gdata-goa-authorizer.h broken for C++
Status: RESOLVED FIXED
Product: libgdata
Classification: Platform
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: libgdata-maint
libgdata-maint
Depends on:
Blocks:
 
 
Reported: 2013-12-01 15:44 UTC by Aurimas Černius
Modified: 2013-12-02 11:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Should fix a bug. (836 bytes, patch)
2013-12-01 15:44 UTC, Aurimas Černius
committed Details | Review

Description Aurimas Černius 2013-12-01 15:44:09 UTC
Created attachment 263239 [details] [review]
Should fix a bug.

Missing enclosing bracket '}' (G_END_DECLS).

Patch attached, but I haven't built (missing deps on my system), so please, verify it :)
Comment 1 Philip Withnall 2013-12-02 11:51:38 UTC
Pushed to master along with a second missing G_END_DECLS. Thanks for the patch!

commit 89d9deeb8be9496b00868c7f3359ceb13f1e80a2
Author: Philip Withnall <philip.withnall@collabora.co.uk>
Date:   Mon Dec 2 11:50:41 2013 +0000

    tasks: Add missing G_END_DECLS to fix C++ compilation
    
    This should fix C++ compilation for libgdata entirely. (Untested.)
    
    https://bugzilla.gnome.org/show_bug.cgi?id=719647

 gdata/services/tasks/gdata-tasks-service.h | 2 ++
 1 file changed, 2 insertions(+)

commit 5de5b9199b60de49a5be3d707580083c4147229d
Author: Aurimas Černius <aurisc4@gmail.com>
Date:   Sun Dec 1 17:35:18 2013 +0200

    core: Fix gdata-goa-authorizer.h for C++
    
    Add missing G_END_DECLS.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=719647

 gdata/gdata-goa-authorizer.h | 2 ++
 1 file changed, 2 insertions(+)