core: Fix gdata-goa-authorizer.h for C++

Add missing G_END_DECLS.

https://bugzilla.gnome.org/show_bug.cgi?id=719647