gdata/gdata-goa-authorizer.h
@@ -67,4 +67,6 @@ GType gdata_goa_authorizer_get_type (void) G_GNUC_CONST;
 GDataGoaAuthorizer *gdata_goa_authorizer_new (GoaObject *goa_object) G_GNUC_WARN_UNUSED_RESULT G_GNUC_MALLOC;
 GoaObject *gdata_goa_authorizer_get_goa_object (GDataGoaAuthorizer *self) G_GNUC_PURE;
 
+G_END_DECLS
+
 #endif /* GDATA_GOA_AUTHORIZER_H */
